[package]
name = "hdfesse"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hdfesse_proto = { path = "../hdfesse_proto" }
libhdfesse = { path = "../libhdfesse" }
protobuf = "2"
structopt = "0.3"
thiserror = "1.0"
