[package]
name = "hdfesse"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hdfesse_proto = { path = "../hdfesse_proto" }
itertools = "0.10"
lazy_static = "1.4"
libhdfesse = { path = "../libhdfesse" }
number_prefix = "0.4"
protobuf = "2"
regex = { version = "1.4", features = ["unicode-bool"] }
structopt = "0.3"
thiserror = "1.0"
