[package]
name = "hdfesse"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hdfesse_proto = { path = "../hdfesse_proto" }
itertools = "0.10"
lazy_static = "1.4"
libhdfesse = { path = "../libhdfesse" }
number_prefix = "0.4"
protobuf = "2"
# The features make binary smaller, but with some performance (though
# they are never benchmarked).
regex = { version = "1.4", features = ["perf", "std", "unicode-gencat"], default-features = false }
structopt = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-tree = "0.1"
