[package]
name = "hdfesse_proto"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2", features = ["with-bytes"] }

[build-dependencies]
protoc-rust = "2.0"
