[package]
name = "hdfs"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.2"
libc = "0.2"
libhdfesse = { path = "../libhdfesse" }
hdfesse_proto = { path = "../hdfesse_proto" }
phf = { version = "0.8", features = ["macros"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]
