[package]
name = "pyhdfesse"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyhdfesse"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
libhdfesse = { path = "../libhdfesse" }
hdfesse_proto = { path = "../hdfesse_proto" }
protobuf = "2"

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.14.2"
